location data 요청/응답 확인 완료